fix(main nav desktop): positionning to its container

--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -249,6 +249,7 @@
     background-color: white;
 
     &-collapse {
+      position: relative;
       .block[id*="botondona"] {
         display: none;
       }
