--- a/css/style.css
+++ b/css/style.css
@@ -8425,131 +8425,134 @@ body {
   /* line 248, ../scss/fxj/_navbar-header.scss */
   .navbar {
     background-color: white; }
-    /* line 252, ../scss/fxj/_navbar-header.scss */
-    .navbar-collapse .block[id*="botondona"] {
-      display: none; }
+    /* line 251, ../scss/fxj/_navbar-header.scss */
+    .navbar-collapse {
+      position: relative; }
+      /* line 253, ../scss/fxj/_navbar-header.scss */
+      .navbar-collapse .block[id*="botondona"] {
+        display: none; }
 
-  /* line 257, ../scss/fxj/_navbar-header.scss */
+  /* line 258, ../scss/fxj/_navbar-header.scss */
   .navbar-header {
     width: 100%; }
-    /* line 260, ../scss/fxj/_navbar-header.scss */
+    /* line 261, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo {
       margin-left: 0; }
-    /* line 264, ../scss/fxj/_navbar-header.scss */
+    /* line 265, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block[id*="botondona"] {
       margin-right: 37px; }
-    /* line 269, ../scss/fxj/_navbar-header.scss */
+    /* line 270, ../scss/fxj/_navbar-header.scss */
     .navbar-header .region-navigation > .search-block-form {
       right: 0px;
       top: 15px; }
-      /* line 273, ../scss/fxj/_navbar-header.scss */
+      /* line 274, ../scss/fxj/_navbar-header.scss */
       .navbar-header .region-navigation > .search-block-form .form-item {
         margin-bottom: 0; }
 
-  /* line 278, ../scss/fxj/_navbar-header.scss */
+  /* line 279, ../scss/fxj/_navbar-header.scss */
   .region-navigation-collapsible {
     /*position: relative;*/ }
-    /* line 282, ../scss/fxj/_navbar-header.scss */
+    /* line 283, ../scss/fxj/_navbar-header.scss */
     .region-navigation-collapsible .block[id*="dropdownlanguagecontent"], .region-navigation-collapsible .block[id*="dropdownlanguagecontenido"], .region-navigation-collapsible .block[id*="redessociales"] {
       display: none; }
-    /* line 289, ../scss/fxj/_navbar-header.scss */
+    /* line 290, ../scss/fxj/_navbar-header.scss */
     .region-navigation-collapsible nav[id*="navegacionsecundaria"] {
       display: none; }
 
-  /* line 294, ../scss/fxj/_navbar-header.scss */
+  /* line 295, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     position: absolute;
     right: 16rem;
     top: 7px; }
-    /* line 299, ../scss/fxj/_navbar-header.scss */
+    /* line 300, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 5px 0 0; }
-      /* line 304, ../scss/fxj/_navbar-header.scss */
+      /* line 305, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
         border-color: #16a085; }
-      /* line 310, ../scss/fxj/_navbar-header.scss */
+      /* line 311, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn, .navbar-nav > li .carousel .carousel-caption a, .carousel .carousel-caption .navbar-nav > li a {
         padding: 15px 0 18px 0; }
-        /* line 313, ../scss/fxj/_navbar-header.scss */
+        /* line 314, ../scss/fxj/_navbar-header.scss */
         .navbar-nav > li .btn:not(.dropdown-toggle), .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle) {
           border-bottom: 5px solid white;
           font-weight: 300;
           text-decoration: none; }
-          /* line 318, ../scss/fxj/_navbar-header.scss */
+          /* line 319, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):hover, .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle):hover, .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle):hover, .navbar-nav > li .btn:not(.dropdown-toggle):focus, .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle):focus, .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle):focus {
             color: #16a085; }
-          /* line 323, ../scss/fxj/_navbar-header.scss */
+          /* line 324, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):after, .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle):after, .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle):after {
             color: #777777;
             content: "|";
             display: inline-block;
             margin: 0 0 0 8px; }
-      /* line 333, ../scss/fxj/_navbar-header.scss */
+      /* line 334, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li.active .btn:not(.dropdown-toggle), .navbar-nav > li.active .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav > li.active a:not(.dropdown-toggle) {
         border-bottom-color: #16a085; } }
 @media (min-width: 992px) {
-  /* line 342, ../scss/fxj/_navbar-header.scss */
+  /* line 343, ../scss/fxj/_navbar-header.scss */
   .navbar-header .block[id*="botondona"] {
     margin-right: 47px;
     padding: 0 15px; }
 
-  /* line 347, ../scss/fxj/_navbar-header.scss */
+  /* line 348, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     right: 19rem; }
-    /* line 349, ../scss/fxj/_navbar-header.scss */
+    /* line 350, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 10px; }
-      /* line 351, ../scss/fxj/_navbar-header.scss */
+      /* line 352, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn:not(.dropdown-toggle), .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle) {
         font-weight: 400; } }
-/* line 359, ../scss/fxj/_navbar-header.scss */
+/* line 360, ../scss/fxj/_navbar-header.scss */
 #block-fxj-alpha-search {
   display: none; }
 
-/* line 362, ../scss/fxj/_navbar-header.scss */
+/* line 363, ../scss/fxj/_navbar-header.scss */
 .spb-popup-main-wrapper {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
   background-size: 200px;
   border: 0; }
-  /* line 368, ../scss/fxj/_navbar-header.scss */
+  /* line 369, ../scss/fxj/_navbar-header.scss */
   .spb-popup-main-wrapper .search-block-form {
     margin: 30vh 10vw 0 10vw; }
-    /* line 371, ../scss/fxj/_navbar-header.scss */
+    /* line 372, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-control {
       background-color: transparent;
       font-size: 3rem; }
-      /* line 375, ../scss/fxj/_navbar-header.scss */
+      /* line 376, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         font-size: 3rem; }
-      /* line 378, ../scss/fxj/_navbar-header.scss */
+      /* line 379, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
         /* IE 10+ */
         font-size: 3rem; }
-      /* line 381, ../scss/fxj/_navbar-header.scss */
+      /* line 382, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
         font-size: 3rem; }
-      /* line 384, ../scss/fxj/_navbar-header.scss */
+      /* line 385, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
         font-size: 3rem; }
-    /* line 389, ../scss/fxj/_navbar-header.scss */
+    /* line 390, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-submit {
       background-color: transparent;
       font-size: 2rem; }
 
-/* line 395, ../scss/fxj/_navbar-header.scss */
+/* line 396, ../scss/fxj/_navbar-header.scss */
 .spb_top_center {
   bottom: 0;
   left: 0;
   right: 0;
   top: 0; }
 
-/* line 401, ../scss/fxj/_navbar-header.scss */
+/* line 402, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-minimize {
   display: none; }
 
-/* line 404, ../scss/fxj/_navbar-header.scss */
+/* line 405, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-close {
   width: 4rem;
   height: 4rem;
@@ -8561,18 +8564,18 @@ body {
   right: 10vw;
   top: 1rem; }
 
-/* line 414, ../scss/fxj/_navbar-header.scss */
+/* line 415, ../scss/fxj/_navbar-header.scss */
 #search-popup {
   border: 0;
   color: #777777;
   display: none;
   background-color: transparent;
   border-color: transparent; }
-  /* line 421, ../scss/fxj/_navbar-header.scss */
+  /* line 422, ../scss/fxj/_navbar-header.scss */
   #search-popup:hover, #search-popup:focus {
     color: #16a085; }
 
-/* line 426, ../scss/fxj/_navbar-header.scss */
+/* line 427, ../scss/fxj/_navbar-header.scss */
 .simple-popup-blocks-global + #search-popup {
   display: block;
   font-size: 2rem;
@@ -8581,7 +8584,7 @@ body {
   top: 15px; }
 
 @media (min-width: 768px) {
-  /* line 434, ../scss/fxj/_navbar-header.scss */
+  /* line 435, ../scss/fxj/_navbar-header.scss */
   .simple-popup-blocks-global + #search-popup {
     right: -10px; } }
 /* line 2, ../scss/fxj/_forms.scss */
