--- a/css/style.css
+++ b/css/style.css
@@ -8085,7 +8085,7 @@ p:last-child,
   .help-block:first-child, .control-group .help-inline:first-child {
     margin-top: 0; }
 
-/* line 20, ../scss/fxj/_mixins.scss */
+/* line 26, ../scss/fxj/_mixins.scss */
 .btn-donate, .region-collaborate .collaborate-feature a {
   color: #fff;
   background-color: #f1c40f;
@@ -8996,127 +8996,131 @@ a.a2a_i, i.a2a_i {
   max-width: none;
   padding: 0; }
 
-/* line 11, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .item {
-  text-align: center; }
-  /* line 13, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .item img {
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-    display: inline-block;
-    height: 300px;
-    left: calc((100% - 1440px)/2);
-    position: relative;
-    max-width: none; }
-/* line 22, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-container {
-  height: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  max-width: 1170px; }
-/* line 31, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-caption {
-  bottom: 70px;
-  padding: 0;
-  text-align: left;
-  right: auto;
-  width: 28rem; }
-  /* line 38, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-caption h3 {
-    display: none;
-    font-size: 3.2rem;
-    font-weight: 600;
-    margin: 0 0 20px 0;
-    padding: 0; }
-  /* line 44, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-caption p {
-    font-size: 3rem;
-    font-weight: 600;
-    margin: 0 0 10px 0;
-    padding: 0; }
-  /* line 51, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-caption a {
-    font-size: 1.6rem;
-    font-weight: 300; }
-/* line 58, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-indicators {
-  bottom: 20px;
-  margin-bottom: 0;
-  max-width: 1170px;
-  z-index: 1; }
-  /* line 64, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-indicators li {
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    margin-right: 5px; }
-    /* line 69, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-indicators li:hover, .carousel .carousel-indicators li:focus, .carousel .carousel-indicators li.active {
-      background-color: #16a085; }
-/* line 76, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-control {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  background: transparent none; }
-  /* line 80, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-control .glyphicon {
-    width: 40px;
-    height: 40px;
-    border: 1px solid white;
-    border-radius: 20px;
-    font-size: 20px; }
-    /* line 86, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-control .glyphicon:before {
-      margin-top: 8px;
-      display: block; }
-    /* line 90, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-control .glyphicon-chevron-left, .carousel .carousel-control .glyphicon-chevron-right {
-      top: auto;
-      bottom: 20px; }
-  /* line 99, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-control:hover .glyphicon, .carousel .carousel-control:focus .glyphicon {
-    background-color: white;
-    color: #16a085; }
-/* line 108, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel-fade .carousel-inner .item {
-  transition-property: opacity; }
-/* line 112, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel-fade .carousel-inner .item,
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  opacity: 0; }
-/* line 118, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel-fade .carousel-inner .active,
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-  opacity: 1; }
-/* line 124, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel-fade .carousel-inner .next,
-.carousel-fade .carousel-inner .prev,
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  left: 0;
-  transform: translate3d(0, 0, 0); }
-/* line 133, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel-fade .carousel-control {
-  z-index: 2; }
+/* line 9, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel {
+  background-color: #eeeeee; }
+  /* line 12, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .item {
+    text-align: center; }
+    /* line 14, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .item img {
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s;
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+      display: inline-block;
+      height: 300px;
+      left: calc((100% - 1440px)/2);
+      position: relative;
+      max-width: none; }
+  /* line 24, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-container {
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    max-width: 1170px; }
+  /* line 33, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-caption {
+    bottom: 70px;
+    padding: 0;
+    text-align: left;
+    right: auto;
+    width: 28rem; }
+    /* line 40, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-caption h3 {
+      display: none;
+      font-size: 3.2rem;
+      font-weight: 600;
+      margin: 0 0 20px 0;
+      padding: 0; }
+    /* line 46, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-caption p {
+      font-size: 3rem;
+      font-weight: 600;
+      margin: 0 0 10px 0;
+      padding: 0; }
+    /* line 53, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-caption a {
+      font-size: 1.6rem;
+      font-weight: 300; }
+  /* line 60, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-indicators {
+    bottom: 20px;
+    margin-bottom: 0;
+    max-width: 1170px;
+    z-index: 1; }
+    /* line 66, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-indicators li {
+      width: 20px;
+      height: 20px;
+      border-radius: 10px;
+      margin-right: 5px; }
+      /* line 71, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-indicators li:hover, .carousel .carousel-indicators li:focus, .carousel .carousel-indicators li.active {
+        background-color: #16a085; }
+  /* line 78, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-control {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: transparent none; }
+    /* line 82, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-control .glyphicon {
+      width: 40px;
+      height: 40px;
+      border: 1px solid white;
+      border-radius: 20px;
+      font-size: 20px; }
+      /* line 88, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-control .glyphicon:before {
+        margin-top: 8px;
+        display: block; }
+      /* line 92, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-control .glyphicon-chevron-left, .carousel .carousel-control .glyphicon-chevron-right {
+        top: auto;
+        bottom: 20px; }
+    /* line 101, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-control:hover .glyphicon, .carousel .carousel-control:focus .glyphicon {
+      background-color: white;
+      color: #16a085; }
+  /* line 110, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel-fade .carousel-inner .item {
+    transition-property: opacity; }
+  /* line 114, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel-fade .carousel-inner .item,
+  .carousel-fade .carousel-inner .active.left,
+  .carousel-fade .carousel-inner .active.right {
+    opacity: 0; }
+  /* line 120, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel-fade .carousel-inner .active,
+  .carousel-fade .carousel-inner .next.left,
+  .carousel-fade .carousel-inner .prev.right {
+    opacity: 1; }
+  /* line 126, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel-fade .carousel-inner .next,
+  .carousel-fade .carousel-inner .prev,
+  .carousel-fade .carousel-inner .active.left,
+  .carousel-fade .carousel-inner .active.right {
+    left: 0;
+    transform: translate3d(0, 0, 0); }
+  /* line 135, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel-fade .carousel-control {
+    z-index: 2; }
 
 @media (min-width: 1200px) {
-  /* line 142, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 144, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .item img {
     left: auto; }
-  /* line 146, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 148, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-container {
     margin-right: calc((100% - 1170px )/2);
     margin-left: calc((100% - 1170px)/2); }
-  /* line 150, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 152, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control.right {
     right: calc((100% - 1170px )/2); }
-  /* line 153, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 155, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control.left {
     left: calc((100% - 1170px )/2); } }
 /* line 1, ../scss/fxj/_views.scss */
