--- a/scss/fxj/_mixins.scss
+++ b/scss/fxj/_mixins.scss
@@ -1,13 +1,19 @@
+@mixin shadow-xl() {
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.5);
+}
+@mixin shadow-xl-white() {
+  box-shadow: 0 .5rem 1rem rgba(255,255,255,.5);
+}
 @mixin shadow() {
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 }
 @mixin shadow-white() {
   box-shadow: 0 .5rem 1rem rgba(255,255,255,.15);
 }
-@mixin shadow-sm {
+@mixin shadow-sm() {
   box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
 }
-@mixin shadow-sm-white {
+@mixin shadow-sm-white() {
   box-shadow: 0 .125rem .25rem rgba(255,255,255,.075);
 }
 
