fix(secondary nav): movile hover and active state

--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -173,6 +173,12 @@
 
           a {
             color: white;
+
+            &:hover,
+            &:focus {
+              background-color: $brand-quaternary;
+              text-decoration: underline;
+            }
           }
         }
       }
