--- a/css/style.css
+++ b/css/style.css
@@ -8356,62 +8356,66 @@ body {
         /* line 174, ../scss/fxj/_navbar-header.scss */
         .navbar-fixed-top .navbar-collapse .region-navigation-collapsible nav[id*="navegacionsecundaria"] a {
           color: white; }
-      /* line 180, ../scss/fxj/_navbar-header.scss */
+          /* line 177, ../scss/fxj/_navbar-header.scss */
+          .navbar-fixed-top .navbar-collapse .region-navigation-collapsible nav[id*="navegacionsecundaria"] a:hover, .navbar-fixed-top .navbar-collapse .region-navigation-collapsible nav[id*="navegacionsecundaria"] a:focus {
+            background-color: #c0392b;
+            text-decoration: underline; }
+      /* line 186, ../scss/fxj/_navbar-header.scss */
       .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="dropdownlanguagecontent"], .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="dropdownlanguagecontenido"] {
         background-color: #c0392b;
         float: none;
         margin: 0;
         padding: 15px; }
-      /* line 187, ../scss/fxj/_navbar-header.scss */
+      /* line 193, ../scss/fxj/_navbar-header.scss */
       .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="redessociales"] {
         background-color: #333333;
         padding: 15px; }
-        /* line 190, ../scss/fxj/_navbar-header.scss */
+        /* line 196, ../scss/fxj/_navbar-header.scss */
         .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="redessociales"] h2 {
           color: #777777;
           font-size: 2rem;
           font-weight: 600;
           margin-top: 0; }
-        /* line 196, ../scss/fxj/_navbar-header.scss */
+        /* line 202, ../scss/fxj/_navbar-header.scss */
         .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="redessociales"] a {
           color: white; }
-        /* line 199, ../scss/fxj/_navbar-header.scss */
+        /* line 205, ../scss/fxj/_navbar-header.scss */
         .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="redessociales"] .svg-inline--fa {
           width: 30px; }
 
-  /* line 206, ../scss/fxj/_navbar-header.scss */
+  /* line 212, ../scss/fxj/_navbar-header.scss */
   .navbar-header .logo {
     height: 45px; }
 
-  /* line 209, ../scss/fxj/_navbar-header.scss */
+  /* line 215, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     padding: 15px; }
-    /* line 212, ../scss/fxj/_navbar-header.scss */
+    /* line 218, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .caret {
       border-width: 10px; }
-    /* line 216, ../scss/fxj/_navbar-header.scss */
+    /* line 222, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn:not(.dropdown-toggle), .navbar-nav .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav a:not(.dropdown-toggle) {
       font-size: 2rem;
       padding-left: 0;
       text-align: left;
       width: calc(100% - 40px); }
-    /* line 222, ../scss/fxj/_navbar-header.scss */
+    /* line 228, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .dropdown-menu {
       -webkit-box-shadow: none;
       box-shadow: none;
       background-color: transparent;
       position: relative; }
-      /* line 227, ../scss/fxj/_navbar-header.scss */
+      /* line 233, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .dropdown-menu a {
         font-size: 2rem; }
-    /* line 231, ../scss/fxj/_navbar-header.scss */
+    /* line 237, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn-group {
       display: block; }
-      /* line 235, ../scss/fxj/_navbar-header.scss */
+      /* line 241, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .btn-group.open + .dropdown-menu {
         float: none;
         position: static; }
-    /* line 241, ../scss/fxj/_navbar-header.scss */
+    /* line 247, ../scss/fxj/_navbar-header.scss */
     .navbar-nav li {
       margin-bottom: 5px; }
       /* line 14, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
@@ -8422,137 +8426,137 @@ body {
       .navbar-nav li:after {
         clear: both; } }
 @media (min-width: 768px) {
-  /* line 248, ../scss/fxj/_navbar-header.scss */
+  /* line 254, ../scss/fxj/_navbar-header.scss */
   .navbar {
     background-color: white; }
-    /* line 251, ../scss/fxj/_navbar-header.scss */
+    /* line 257, ../scss/fxj/_navbar-header.scss */
     .navbar-collapse {
       margin: 6px 15rem 0 165px !important;
       position: relative; }
-      /* line 255, ../scss/fxj/_navbar-header.scss */
+      /* line 261, ../scss/fxj/_navbar-header.scss */
       .navbar-collapse .block[id*="botondona"] {
         display: none; }
 
-  /* line 260, ../scss/fxj/_navbar-header.scss */
+  /* line 266, ../scss/fxj/_navbar-header.scss */
   .navbar-header {
     width: 100%; }
-    /* line 263, ../scss/fxj/_navbar-header.scss */
+    /* line 269, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo {
       margin-left: 0; }
-    /* line 267, ../scss/fxj/_navbar-header.scss */
+    /* line 273, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block[id*="botondona"] {
       margin-right: 37px; }
-    /* line 272, ../scss/fxj/_navbar-header.scss */
+    /* line 278, ../scss/fxj/_navbar-header.scss */
     .navbar-header .region-navigation > .search-block-form {
       right: 0px;
       top: 15px; }
-      /* line 276, ../scss/fxj/_navbar-header.scss */
+      /* line 282, ../scss/fxj/_navbar-header.scss */
       .navbar-header .region-navigation > .search-block-form .form-item {
         margin-bottom: 0; }
 
-  /* line 281, ../scss/fxj/_navbar-header.scss */
+  /* line 287, ../scss/fxj/_navbar-header.scss */
   .region-navigation-collapsible {
     /*position: relative;*/ }
-    /* line 285, ../scss/fxj/_navbar-header.scss */
+    /* line 291, ../scss/fxj/_navbar-header.scss */
     .region-navigation-collapsible .block[id*="dropdownlanguagecontent"], .region-navigation-collapsible .block[id*="dropdownlanguagecontenido"], .region-navigation-collapsible .block[id*="redessociales"] {
       display: none; }
-    /* line 292, ../scss/fxj/_navbar-header.scss */
+    /* line 298, ../scss/fxj/_navbar-header.scss */
     .region-navigation-collapsible nav[id*="navegacionsecundaria"] {
       display: none; }
 
-  /* line 297, ../scss/fxj/_navbar-header.scss */
+  /* line 303, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     position: absolute;
     right: 0; }
-    /* line 301, ../scss/fxj/_navbar-header.scss */
+    /* line 307, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 5px 0 0; }
-      /* line 306, ../scss/fxj/_navbar-header.scss */
+      /* line 312, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
         border-color: #16a085; }
-      /* line 312, ../scss/fxj/_navbar-header.scss */
+      /* line 318, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn, .navbar-nav > li .carousel .carousel-caption a, .carousel .carousel-caption .navbar-nav > li a {
         padding: 15px 0 18px 0; }
-        /* line 315, ../scss/fxj/_navbar-header.scss */
+        /* line 321, ../scss/fxj/_navbar-header.scss */
         .navbar-nav > li .btn:not(.dropdown-toggle), .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle) {
           border-bottom: 5px solid white;
           font-weight: 300;
           text-decoration: none; }
-          /* line 320, ../scss/fxj/_navbar-header.scss */
+          /* line 326, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):hover, .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle):hover, .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle):hover, .navbar-nav > li .btn:not(.dropdown-toggle):focus, .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle):focus, .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle):focus {
             color: #16a085; }
-          /* line 325, ../scss/fxj/_navbar-header.scss */
+          /* line 331, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):after, .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle):after, .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle):after {
             color: #777777;
             content: "|";
             display: inline-block;
             margin: 0 0 0 8px; }
-      /* line 335, ../scss/fxj/_navbar-header.scss */
+      /* line 341, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li.active .btn:not(.dropdown-toggle), .navbar-nav > li.active .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav > li.active a:not(.dropdown-toggle) {
         border-bottom-color: #16a085; } }
 @media (min-width: 992px) {
-  /* line 344, ../scss/fxj/_navbar-header.scss */
+  /* line 350, ../scss/fxj/_navbar-header.scss */
   .navbar-header .block[id*="botondona"] {
     margin-right: 47px;
     padding: 0 15px; }
 
-  /* line 349, ../scss/fxj/_navbar-header.scss */
+  /* line 355, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     right: 4rem; }
-    /* line 351, ../scss/fxj/_navbar-header.scss */
+    /* line 357, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 10px; }
-      /* line 353, ../scss/fxj/_navbar-header.scss */
+      /* line 359, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn:not(.dropdown-toggle), .navbar-nav > li .carousel .carousel-caption a:not(.dropdown-toggle), .carousel .carousel-caption .navbar-nav > li a:not(.dropdown-toggle) {
         font-weight: 400; } }
-/* line 361, ../scss/fxj/_navbar-header.scss */
+/* line 367, ../scss/fxj/_navbar-header.scss */
 #block-fxj-alpha-search {
   display: none; }
 
-/* line 364, ../scss/fxj/_navbar-header.scss */
+/* line 370, ../scss/fxj/_navbar-header.scss */
 .spb-popup-main-wrapper {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
   background-size: 200px;
   border: 0; }
-  /* line 370, ../scss/fxj/_navbar-header.scss */
+  /* line 376, ../scss/fxj/_navbar-header.scss */
   .spb-popup-main-wrapper .search-block-form {
     margin: 30vh 10vw 0 10vw; }
-    /* line 373, ../scss/fxj/_navbar-header.scss */
+    /* line 379, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-control {
       background-color: transparent;
       font-size: 3rem; }
-      /* line 377, ../scss/fxj/_navbar-header.scss */
+      /* line 383, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         font-size: 3rem; }
-      /* line 380, ../scss/fxj/_navbar-header.scss */
+      /* line 386, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
         /* IE 10+ */
         font-size: 3rem; }
-      /* line 383, ../scss/fxj/_navbar-header.scss */
+      /* line 389, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
         font-size: 3rem; }
-      /* line 386, ../scss/fxj/_navbar-header.scss */
+      /* line 392, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
         font-size: 3rem; }
-    /* line 391, ../scss/fxj/_navbar-header.scss */
+    /* line 397, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-submit {
       background-color: transparent;
       font-size: 2rem; }
 
-/* line 397, ../scss/fxj/_navbar-header.scss */
+/* line 403, ../scss/fxj/_navbar-header.scss */
 .spb_top_center {
   bottom: 0;
   left: 0;
   right: 0;
   top: 0; }
 
-/* line 403, ../scss/fxj/_navbar-header.scss */
+/* line 409, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-minimize {
   display: none; }
 
-/* line 406, ../scss/fxj/_navbar-header.scss */
+/* line 412, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-close {
   width: 4rem;
   height: 4rem;
@@ -8564,18 +8568,18 @@ body {
   right: 10vw;
   top: 1rem; }
 
-/* line 416, ../scss/fxj/_navbar-header.scss */
+/* line 422, ../scss/fxj/_navbar-header.scss */
 #search-popup {
   border: 0;
   color: #777777;
   display: none;
   background-color: transparent;
   border-color: transparent; }
-  /* line 423, ../scss/fxj/_navbar-header.scss */
+  /* line 429, ../scss/fxj/_navbar-header.scss */
   #search-popup:hover, #search-popup:focus {
     color: #16a085; }
 
-/* line 428, ../scss/fxj/_navbar-header.scss */
+/* line 434, ../scss/fxj/_navbar-header.scss */
 .simple-popup-blocks-global + #search-popup {
   display: block;
   font-size: 2rem;
@@ -8584,7 +8588,7 @@ body {
   top: 15px; }
 
 @media (min-width: 768px) {
-  /* line 436, ../scss/fxj/_navbar-header.scss */
+  /* line 442, ../scss/fxj/_navbar-header.scss */
   .simple-popup-blocks-global + #search-popup {
     right: -10px; } }
 /* line 2, ../scss/fxj/_forms.scss */
@@ -8765,24 +8769,22 @@ body {
       margin-right: 5px; }
   /* line 136, ../scss/fxj/_footer.scss */
   .sticky-footer .menu.nav li.active > a {
-    color: #16a085;
     background-color: transparent; }
-    /* line 140, ../scss/fxj/_footer.scss */
+    /* line 139, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.nav li.active > a:hover, .sticky-footer .menu.nav li.active > a:focus {
-      color: #16a085;
       background-color: transparent;
       text-decoration: underline; }
-/* line 150, ../scss/fxj/_footer.scss */
+/* line 148, ../scss/fxj/_footer.scss */
 .sticky-footer .block-addtoany {
   float: right;
   position: relative; }
-  /* line 153, ../scss/fxj/_footer.scss */
+  /* line 151, ../scss/fxj/_footer.scss */
   .sticky-footer .block-addtoany .a2a_kit {
     position: relative;
     right: 0;
     bottom: 2rem; }
 
-/* line 162, ../scss/fxj/_footer.scss */
+/* line 160, ../scss/fxj/_footer.scss */
 .js .sticky-footer {
   bottom: 0;
   position: -webkit-sticky;
@@ -8790,70 +8792,70 @@ body {
   width: 100%;
   z-index: 20; }
 
-/* line 173, ../scss/fxj/_footer.scss */
+/* line 171, ../scss/fxj/_footer.scss */
 .footer.container-fluid {
   background-color: #333333; }
-/* line 176, ../scss/fxj/_footer.scss */
+/* line 174, ../scss/fxj/_footer.scss */
 .footer .svg-inline--fa {
   width: 30px; }
-/* line 179, ../scss/fxj/_footer.scss */
+/* line 177, ../scss/fxj/_footer.scss */
 .footer a {
   color: white; }
-/* line 182, ../scss/fxj/_footer.scss */
+/* line 180, ../scss/fxj/_footer.scss */
 .footer h2 {
   color: #777777;
   font-size: 2rem;
   font-weight: 600;
   margin-top: 0;
   margin-bottom: 20px; }
-/* line 189, ../scss/fxj/_footer.scss */
+/* line 187, ../scss/fxj/_footer.scss */
 .footer strong {
   font-weight: 400; }
-/* line 192, ../scss/fxj/_footer.scss */
+/* line 190, ../scss/fxj/_footer.scss */
 .footer .block {
   margin: 0 0 3rem 0; }
-  /* line 201, ../scss/fxj/_footer.scss */
+  /* line 199, ../scss/fxj/_footer.scss */
   .footer .block:first-of-type img {
     width: 100px; }
-  /* line 206, ../scss/fxj/_footer.scss */
+  /* line 204, ../scss/fxj/_footer.scss */
   .footer .block:nth-last-of-type(2) .row {
     margin-left: 0;
     margin-right: 0; }
-  /* line 211, ../scss/fxj/_footer.scss */
+  /* line 209, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     border-top: 1px solid #777777;
     color: #777777;
     margin: 0;
     padding: 15px 0 0 0; }
-    /* line 217, ../scss/fxj/_footer.scss */
+    /* line 215, ../scss/fxj/_footer.scss */
     .footer .block:last-of-type a {
       color: #777777; }
-/* line 223, ../scss/fxj/_footer.scss */
+/* line 221, ../scss/fxj/_footer.scss */
 .footer .collaborate-feature-container {
   margin-bottom: 10px; }
-  /* line 226, ../scss/fxj/_footer.scss */
+  /* line 224, ../scss/fxj/_footer.scss */
   .footer .collaborate-feature-container:first-of-type {
     display: none; }
 
 @media (min-width: 768px) {
-  /* line 236, ../scss/fxj/_footer.scss */
+  /* line 234, ../scss/fxj/_footer.scss */
   .footer .block:first-child img {
     width: auto; }
-  /* line 240, ../scss/fxj/_footer.scss */
+  /* line 238, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     clear: both;
     float: left;
     width: 100%; } }
 @media (max-width: 767px) {
-  /* line 250, ../scss/fxj/_footer.scss */
+  /* line 248, ../scss/fxj/_footer.scss */
   .sticky-footer .menu.nav a {
     padding: 5px 15px;
     text-align: center; }
-    /* line 253, ../scss/fxj/_footer.scss */
+    /* line 251, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.nav a .svg-inline--fa {
       display: block;
       margin: 0 auto 5px auto; }
-  /* line 258, ../scss/fxj/_footer.scss */
+  /* line 256, ../scss/fxj/_footer.scss */
   .sticky-footer .block-dropdown-language {
     margin-top: 5px; } }
 /* line 2, ../scss/fxj/_addtoany.scss */
