--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -219,11 +219,16 @@
   }
 
   .collaborate-feature-container {
-    margin-bottom: 10px;
-
-    &:first-of-type {
+    p {
+      margin-bottom: 10px;
+    }
+    &:nth-of-type(2) {
       display:none;
     }
+  }
+  .collaborate-footer a {
+    color: white;
+    font-weight: 300;
   }
 }
 
