--- a/scss/fxj/_typo.scss
+++ b/scss/fxj/_typo.scss
@@ -28,7 +28,7 @@ img {
     padding: 0 1rem 0 0;
   }
 }
-.block-title,
+.region:not(.region-sidebar-second) .block-title,
 .page-header {
   @extend .h2--separator;
 }
