fix(class name): collaborate block name dev vs prod

--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -280,7 +280,8 @@
   }
 }
 .region-sidebar-second {
-  .block[id*="block-colabora"] {
+  .block[id*="block-colabora"],
+  .block[id*="block-ayudanos"] {
     padding: 0;
 
     .row {
