--- a/css/style.css
+++ b/css/style.css
@@ -9393,22 +9393,28 @@ a.a2a_i, i.a2a_i {
     min-height: 148px;
     overflow: hidden; } }
 /* line 283, ../scss/fxj/_views.scss */
-.region-sidebar-second .block[id*="block-colabora"] {
+.region-sidebar-second .block[id*="block-colabora"],
+.region-sidebar-second .block[id*="block-ayudanos"] {
   padding: 0; }
-  /* line 286, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .row {
+  /* line 287, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .row,
+  .region-sidebar-second .block[id*="block-ayudanos"] .row {
     margin: 0; }
-  /* line 289, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-header {
+  /* line 290, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-header,
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-header {
     display: none; }
-  /* line 293, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container p {
+  /* line 294, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container p,
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-feature-container p {
     margin-bottom: 20px; }
-  /* line 296, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container a {
+  /* line 297, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container a,
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-feature-container a {
     color: #333333; }
-  /* line 299, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container .fontawesome-icon {
+  /* line 300, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container .fontawesome-icon,
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-feature-container .fontawesome-icon {
     width: 30px;
     height: 30px;
     border: 1px solid #333333;
@@ -9417,14 +9423,18 @@ a.a2a_i, i.a2a_i {
     margin-right: 5px;
     padding-top: 3px;
     text-align: center; }
-  /* line 310, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container:nth-of-type(2) .collaborate-feature:first-of-type {
+  /* line 311, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container:nth-of-type(2) .collaborate-feature:first-of-type,
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-feature-container:nth-of-type(2) .collaborate-feature:first-of-type {
     display: none; }
-  /* line 315, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container:nth-of-type(3), .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container:nth-of-type(4) {
+  /* line 316, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container:nth-of-type(3), .region-sidebar-second .block[id*="block-colabora"] .collaborate-feature-container:nth-of-type(4),
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-feature-container:nth-of-type(3),
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-feature-container:nth-of-type(4) {
     padding: 0 10px; }
-  /* line 320, ../scss/fxj/_views.scss */
-  .region-sidebar-second .block[id*="block-colabora"] .collaborate-footer {
+  /* line 321, ../scss/fxj/_views.scss */
+  .region-sidebar-second .block[id*="block-colabora"] .collaborate-footer,
+  .region-sidebar-second .block[id*="block-ayudanos"] .collaborate-footer {
     border: 1px solid white;
     border-width: 1px 0 0 0;
     font-weight: 300;
@@ -9432,13 +9442,13 @@ a.a2a_i, i.a2a_i {
     margin: 0;
     padding: 10px; }
 
-/* line 333, ../scss/fxj/_views.scss */
+/* line 334, ../scss/fxj/_views.scss */
 .view-empresas-embajadoras a {
   display: block;
   padding: 0 0 3rem 0;
   text-align: center;
   height: 130px; }
-  /* line 339, ../scss/fxj/_views.scss */
+  /* line 340, ../scss/fxj/_views.scss */
   .view-empresas-embajadoras a img {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -9446,7 +9456,7 @@ a.a2a_i, i.a2a_i {
     display: inline-block;
     max-height: 100%;
     width: auto; }
-  /* line 348, ../scss/fxj/_views.scss */
+  /* line 349, ../scss/fxj/_views.scss */
   .view-empresas-embajadoras a:hover img, .view-empresas-embajadoras a:focus img {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
